--- a/Makefile.am
+++ b/Makefile.am
@@ -7,3 +7,7 @@ lib_LTLIBRARIES           = libgvar.la
 
 libgvar_la_LDFLAGS = -version-info 1:0:1
 libgvar_la_SOURCES=selFloat.cpp Header.cpp Block.cpp LineDoc.cpp unpack10.cpp cdaTime.cpp Block3to10.cpp Block0.cpp Block0Doc.cpp Block1or2.cpp
+
+bin_PROGRAMS = gvar_inspector
+gvar_inspector_SOURCES = gvar_inspector.cpp GvarFile.cpp GvarFile.h
+gvar_inspector_LDADD = libgvar.la
