--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT([GVAR Library], [2.0.2], [qjhart@ucdavis.edu], [libgvar], [http://code.google.com/p/qjhart/])
+AC_INIT([GVAR Library],[2.0.2],[qjhart@ucdavis.edu],[libgvar],[http://code.google.com/p/qjhart/])
 AC_CONFIG_SRCDIR(Block.cpp)
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_MACRO_DIR([m4])
@@ -15,7 +15,7 @@ dnl Checks for programs.
 AC_PROG_INSTALL
 dnl AC_PROG_CC
 AC_PROG_CXX
-AC_PROG_LIBTOOL
+LT_INIT
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
